Pinconfig for start module

--- a/software/software.ioc
+++ b/software/software.ioc
@@ -14,22 +14,24 @@ Mcu.Name=STM32F031G(4-6)Ux
 Mcu.Package=UFQFPN28
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=17
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F031G6Ux
@@ -66,6 +68,14 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=MOTOR_PWM
 PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=START
+PA2.Locked=true
+PA2.Signal=GPXTI2
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=KILL
+PA3.Locked=true
+PA3.Signal=GPXTI3
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=XSHUT4
 PA4.Locked=true
@@ -139,6 +149,10 @@ RCC.IPParameters=FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
