--- a/software/software.ioc
+++ b/software/software.ioc
@@ -9,7 +9,8 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
-Mcu.IPNb=6
+Mcu.IP6=TIM3
+Mcu.IPNb=7
 Mcu.Name=STM32F031G(4-6)Ux
 Mcu.Package=UFQFPN28
 Mcu.Pin0=PA0
@@ -22,8 +23,10 @@ Mcu.Pin14=PA15
 Mcu.Pin15=PB3
 Mcu.Pin16=PB4
 Mcu.Pin17=PB5
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PA2
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -31,7 +34,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F031G6Ux
@@ -109,13 +112,19 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=STEER_PWM
 PB3.Signal=S_TIM2_CH2
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=STEER_DIR
-PB4.Locked=true
-PB4.Signal=GPIO_Output
+PB4.GPIO_Label=ENC_A
+PB4.Signal=S_TIM3_CH1
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=MOTOR_DIR
-PB5.Locked=true
-PB5.Signal=GPIO_Output
+PB5.GPIO_Label=ENC_B
+PB5.Signal=S_TIM3_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=MOTOR_DIR
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=STEER_DIR
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -157,9 +166,15 @@ SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IPParameters=EncoderMode
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
