--- a/software/donatello.ioc
+++ b/software/donatello.ioc
@@ -5,14 +5,19 @@ Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=TIM2
+Mcu.IPNb=4
 Mcu.Name=STM32F031G(4-6)Ux
 Mcu.Package=UFQFPN28
 Mcu.Pin0=PA0
 Mcu.Pin1=PA13
 Mcu.Pin2=PA14
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin3=PA15
+Mcu.Pin4=PB3
+Mcu.Pin5=PB6
+Mcu.Pin6=PB7
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F031G6Ux
@@ -37,6 +42,22 @@ PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=SWCLK
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=MOTOR_PWM
+PA15.Locked=true
+PA15.Signal=S_TIM2_CH1_ETR
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=STEER_PWM
+PB3.Locked=true
+PB3.Signal=S_TIM2_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=MOTOR_DIR
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=STEER_DIR
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -64,12 +85,20 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.FamilyName=M
 RCC.IPParameters=FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,Channel-PWM Generation2 CH2
+TIM2.Period=1000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
